# ice-dynamic-invoke-sr

./: Dynamic.ice  codegen.sh
DynamicClient/: build.gradle.kts  settings.gradle.kts  start.sh
DynamicClient/gradle/wrapper/: gradle-wrapper.properties
DynamicClient/src/main/java/: AddReadingGetReadingsExceptionFactory.java  AddStationExceptionFactory.java  Main.java  ParserHelper.java  PositionFormatter.java  ReadingsPrinter.java
DynamicServer/: CMakeLists.txt  start.sh
DynamicServer/.cache/clangd/index/: Dynamic.cpp.3F4E5853A800D961.idx  Dynamic.cpp.75DF45520F461256.idx  Dynamic.h.9DD3903CA12685F2.idx  Dynamic.h.9FABD28C32B4BF23.idx  main.cpp.BA7FE3CD5D82AE58.idx
DynamicServer/src/: main.cpp
